k8s/overlays/local/kafka-local.yml
---
# 1. Le Service (Pour que ton Spring Boot puisse parler à Kafka)
apiVersion: v1
kind: Service
metadata:
  name: kafka-local
  labels:
    app: kafka
spec:
  ports:
    - name: tcp-kafka
      port: 9092
      targetPort: 9092
  selector:
    app: kafka

---
# 2. Le Déploiement (Le serveur Kafka en lui-même)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-local
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
            - containerPort: 9093
