k8s/overlays/local/local-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    # ---------------------------------------------
    # 1. Ton application principale (Front + Back)
    # ---------------------------------------------
    - host: my-project-app.local
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-front-angular-service
                port:
                  number: 80

    # ---------------------------------------------
    # 2. La nouvelle interface Kafka UI
    # ---------------------------------------------
    - host: kafka.my-project-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 80
